index.html: prevent linebreak in longer links

--- a/css/reveal-override.scss
+++ b/css/reveal-override.scss
@@ -85,6 +85,7 @@
 
     a {
         font-family: "Special Elite", monospace !important;
+        white-space: nowrap;
     }
 
     code {
